# Streaming-Parallel-Decision-Tree-Algorithm-

./: README.md  pyproject.toml
spdt/: __init__.py
tests/: test_hello_world.py
